--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.22",
+    "@emotion/core": "^10.0.9",
+    "@emotion/styled": "^10.0.9",
+    "apollo-boost": "^0.3.1",
+    "apollo-cache-inmemory": "^1.3.11",
+    "apollo-link-context": "^1.0.10",
+    "apollo-link-http": "^1.5.7",
     "babel-loader": "^8.0.4",
-    "graphql": "^14.0.2",
+    "graphql": "^14.1.1",
     "react": "^16.6.3",
-    "react-apollo": "^2.3.2",
+    "react-apollo": "^2.5.2",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
